Fixed overflow issue on sample wrapper in demo panel.

--- a/packages/ketchup-showcase/public/showcase.css
+++ b/packages/ketchup-showcase/public/showcase.css
@@ -498,6 +498,7 @@ table.instruction-table th {
   position: relative;
   display: flex;
   box-shadow: 0px 0px 7.5px 0px rgba(128, 128, 128, 0.5);
+  overflow: auto;
 }
 
 #sample-wrapper.full {
